コメントを調整。

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,7 +95,7 @@ set -g status-left-length 30
 # ステータスバー右
 set -g status-right "%Y/%m/%d %T"
 
-# 履歴上限
+# 履歴上限を変更する
 set -g history-limit 999999
 
 # ペイン番号表示時間を長くする
